--- a/tmux.conf
+++ b/tmux.conf
@@ -2,6 +2,7 @@
 bind r source-file ~/.tmux.conf
 
 set-option -g default-terminal "screen-256color"
+set-option -ga terminal-overrides ',xterm-256color:Tc'
 set-option -sg escape-time 10
 set -g status-keys vi
 setw -g mode-keys vi
@@ -18,4 +19,3 @@ bind -n M-H  previous-window
 bind -n M-L next-window
 
 set -g mouse on
-
