using config that is better for neovim

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,9 +1,9 @@
 # Reload tmux config
 bind r source-file ~/.tmux.conf
 
-# set-option -g default-terminal "screen-256color"
-# set-option -ga terminal-overrides ',xterm-256color:Tc'
-set -g default-terminal "xterm"
+set-option -g default-terminal "screen-256color"
+set-option -ga terminal-overrides ',xterm-256color:Tc'
+# set -g default-terminal "xterm"
 set-option -sg escape-time 10
 set -g status-keys vi
 setw -g mode-keys vi
