--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,11 @@
 # Reload tmux config
 bind r source-file ~/.tmux.conf
 
+# Set new panes to open in current directory
+bind c new-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
 set-option -g default-terminal "screen-256color"
 set-option -ga terminal-overrides ',xterm-256color:Tc'
 # set -g default-terminal "xterm"
@@ -15,6 +20,10 @@ bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
+# m / M to move panes arround
+bind-key m choose-window -F "#{window_index}: #{window_name}" "join-pane -h -t %%"
+bind-key M choose-window -F "#{window_index}: #{window_name}" "join-pane -v -t %%"
+
 # Shift arrow to switch windows
 bind -n M-H  previous-window
 bind -n M-L next-window
@@ -25,3 +34,4 @@ set-option -g status-interval 5
 set-option -g automatic-rename on
 set-option -g automatic-rename-format '#{b:pane_current_path}'
 
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
