--- a/.gitmux.conf
+++ b/.gitmux.conf
@@ -1,27 +1,27 @@
 tmux:
   symbols:
-    branch: '⎇ '
+    branch: '  '
     hashprefix: ':'
-    ahead: ↑·
-    behind: ↓·
-    staged: '● '
-    conflict: '✖ '
-    modified: '✚ '
-    untracked: '… '
-    stashed: '⚑ '
-    clean: ✔
+    ahead:  
+    behind:   
+    staged: ' '
+    conflict: ' '
+    modified: '  '
+    untracked: ' '
+    stashed: ' '
+    clean:  
   styles:
     clear: '#[fg=default]'
-    state: '#[fg=red,bold]'
-    branch: '#[fg=white,bold]'
+    state: '#[fg=red]'
+    branch: '#[fg=white]'
     remote: '#[fg=cyan]'
-    staged: '#[fg=green,bold]'
-    conflict: '#[fg=red,bold]'
-    modified: '#[fg=red,bold]'
-    untracked: '#[fg=magenta,bold]'
-    stashed: '#[fg=cyan,bold]'
-    clean: '#[fg=green,bold]'
+    staged: '#[fg=green]'
+    conflict: '#[fg=red]'
+    modified: '#[fg=yellow]'
+    untracked: '#[fg=magenta]'
+    stashed: '#[fg=cyan]'
+    clean: '#[fg=green]'
     divergence: '#[fg=default]'
-  layout: [branch, .., remote-branch, divergence, ' - ', flags]
+  layout: [branch, divergence, flags]
   options:
-    branch_max_len: 0
+    branch_max_len: 16
