fix gitmux icon spacing

--- a/.gitmux.conf
+++ b/.gitmux.conf
@@ -2,14 +2,14 @@ tmux:
   symbols:
     branch: '  '
     hashprefix: ':'
-    ahead:  
-    behind:   
-    staged: ' '
+    ahead: '  '
+    behind: '  '  
+    staged: '  '
     conflict: ' '
     modified: '  '
     untracked: ' '
     stashed: ' '
-    clean:  
+    clean: '  '
   styles:
     clear: '#[fg=default]'
     state: '#[fg=red]'
