don't scroll to bottom after yank

--- a/tmux.conf
+++ b/tmux.conf
@@ -34,4 +34,4 @@ set-option -g status-interval 5
 set-option -g automatic-rename on
 set-option -g automatic-rename-format '#{b:pane_current_path}'
 
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+bind -T copy-mode-vi y send-keys -X copy-selection 'xclip -in -selection clipboard'
