--- a/tmux.conf
+++ b/tmux.conf
@@ -24,6 +24,11 @@ bind -n M-l select-pane -R
 bind-key m choose-window -F "#{window_index}: #{window_name}" "join-pane -h -t %%"
 bind-key M choose-window -F "#{window_index}: #{window_name}" "join-pane -v -t %%"
 
+# move windows
+bind-key -n C-M-H swap-window -t -1
+bind-key -n C-M-L swap-window -t +1
+
+
 # Shift arrow to switch windows
 bind -n M-H  previous-window
 bind -n M-L next-window
@@ -33,5 +38,5 @@ set -g mouse on
 set-option -g status-interval 5
 set-option -g automatic-rename on
 set-option -g automatic-rename-format '#{b:pane_current_path}'
-
-bind -T copy-mode-vi y send-keys -X copy-selection 'xclip -in -selection clipboard'
+set-option -g focus-events on
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
