--- a/tmux.conf
+++ b/tmux.conf
@@ -6,9 +6,11 @@ bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
-set-option -g default-terminal "screen-256color"
-set-option -ga terminal-overrides ',xterm-256color:Tc'
-# set -g default-terminal "xterm"
+set -g default-terminal "screen-256color"
+# set -ag terminal-overrides ",xterm-256color:RGB"
+# set -ag terminal-overrides ",$TERM:RGB"
+set -sg terminal-overrides ",*:RGB"
+
 set-option -sg escape-time 10
 set -g status-keys vi
 setw -g mode-keys vi
