--- a/tmux.conf
+++ b/tmux.conf
@@ -42,3 +42,5 @@ set-option -g automatic-rename on
 set-option -g automatic-rename-format '#{b:pane_current_path}'
 set-option -g focus-events on
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+
+source ~/tmux-files/default-theme.tmuxtheme
