--- a/.gitmux.conf
+++ b/.gitmux.conf
@@ -2,26 +2,26 @@ tmux:
   symbols:
     branch: '  '
     hashprefix: ':'
-    ahead: '  '
-    behind: '  '  
-    staged: '  '
-    conflict: '  '
-    modified: '  '
+    ahead: ' '
+    behind: ' '  
+    staged: ' '
+    conflict: '󰕚 '
+    modified: ' '
     untracked: ' '
-    stashed: '  '
-    clean: '  '
+    stashed: ' '
+    clean: ' '
   styles:
-    clear: '#[fg=default]'
+    clear: '#[fg=colour245]'
     state: '#[fg=red]'
-    branch: '#[fg=white]'
-    remote: '#[fg=cyan]'
-    staged: '#[fg=green]'
-    conflict: '#[fg=red]'
-    modified: '#[fg=yellow]'
-    untracked: '#[fg=magenta]'
-    stashed: '#[fg=cyan]'
-    clean: '#[fg=green]'
-    divergence: '#[fg=default]'
+    branch: '#[fg=colour254]'
+    remote: '#[fg=colour30]'
+    staged: '#[fg=colour225]'
+    conflict: '#[fg=colour214]'
+    modified: '#[fg=colour226]'
+    untracked: '#[fg=colour220]'
+    stashed: '#[fg=colour229]'
+    clean: '#[fg=colour254]'
+    divergence: '#[fg=colour140]'
   layout: [branch, divergence, flags]
   options:
-    branch_max_len: 20
+    branch_max_len: 14
