--- a/tmux.conf
+++ b/tmux.conf
@@ -5,7 +5,7 @@ bind r source-file ~/.tmux.conf
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
-
+set-hook -g client-attached 'run-shell update_display_tmux.sh'
 set -g default-terminal "screen-256color"
 # set -ag terminal-overrides ",xterm-256color:RGB"
 # set -ag terminal-overrides ",$TERM:RGB"
