use simple theme

--- a/tmux.conf
+++ b/tmux.conf
@@ -7,9 +7,10 @@ bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 set-hook -g client-attached 'run-shell update_display_tmux.sh'
 set -g default-terminal "screen-256color"
-# set -ag terminal-overrides ",xterm-256color:RGB"
-# set -ag terminal-overrides ",$TERM:RGB"
+# set -g default-terminal "screen-256color-italic"
 set -sg terminal-overrides ",*:RGB"
+# set -ga terminal-overrides ",screen-256color-italic:Tc"
+
 
 set-option -sg escape-time 10
 set -g status-keys vi
