--- a/.gitmux.conf
+++ b/.gitmux.conf
@@ -11,17 +11,17 @@ tmux:
     stashed: '  '
     clean: ' '
   styles:
-    clear: '#[fg=colour245]'
-    state: '#[fg=red]'
-    branch: '#[fg=colour176]'
-    remote: '#[fg=colour30]'
-    staged: '#[fg=colour225]'
-    conflict: '#[fg=colour214]'
-    modified: '#[fg=colour172]'
-    untracked: '#[fg=colour220]'
-    stashed: '#[fg=colour223]'
-    clean: '#[fg=colour254]'
-    divergence: '#[fg=colour140]'
+    clear: '#[fg=default]'
+    state: '#[fg=default]'
+    branch: '#[fg=default]'
+    remote: '#[fg=default]'
+    staged: '#[fg=default]'
+    conflict: '#[fg=red]'
+    modified: '#[fg=default]'
+    untracked: '#[fg=default]'
+    stashed: '#[fg=default]'
+    clean: '#[fg=default]'
+    divergence: '#[fg=default]'
   layout: [branch, divergence, flags]
   options:
     branch_max_len: 70
