--- a/tmux.conf
+++ b/tmux.conf
@@ -1,20 +1,17 @@
-# Reload tmux config
-bind r source-file ~/.tmux.conf
+set-option -sa terminal-overrides ",xterm*:Tc"
+set -g mouse on
 
-# Set new panes to open in current directory
-bind c new-window -c "#{pane_current_path}"
-bind '"' split-window -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
-set-hook -g client-attached 'run-shell update_display_tmux.sh'
-set -g default-terminal "screen-256color"
-# set -g default-terminal "tmux-256color-italic"                                                                              
-set -sg terminal-overrides ",*:RGB"
-# set -ga terminal-overrides ",tmux-256color:Tc"
+# Vim style pane selection
+bind h select-pane -L
+bind j select-pane -D 
+bind k select-pane -U
+bind l select-pane -R
 
-set-option -sg escape-time 10
-set -g status-keys vi
-setw -g mode-keys vi
-setw -g monitor-activity on
+# Start windows and panes at 1, not 0
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
 
 # Use Alt-vim keys without prefix key to switch panes
 bind -n M-h select-pane -L
@@ -35,12 +32,25 @@ bind-key -n C-M-L swap-window -t +1
 bind -n M-H  previous-window
 bind -n M-L next-window
 
-set -g mouse on
+set -g @catppuccin_flavour 'mocha'
 
-set-option -g status-interval 5
-set-option -g automatic-rename on
-set-option -g automatic-rename-format '#{b:pane_current_path}'
-set-option -g focus-events on
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
-source ~/tmux-files/custom-theme.tmuxtheme
+run '~/.tmux/plugins/tpm/tpm'
+
+# set vi-mode
+set-window-option -g mode-keys vi
+# keybindings
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+
+bind '"' split-window -v -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+set-hook -g client-attached 'run-shell update_display_tmux.sh'
+
+# old config
