--- a/.gitmux.conf
+++ b/.gitmux.conf
@@ -11,17 +11,17 @@ tmux:
     stashed: '  '
     clean: ' '
   styles:
-    clear: '#[fg=default]'
-    state: '#[fg=default]'
-    branch: '#[fg=default]'
-    remote: '#[fg=default]'
-    staged: '#[fg=default]'
-    conflict: '#[fg=red]'
-    modified: '#[fg=default]'
-    untracked: '#[fg=default]'
-    stashed: '#[fg=default]'
-    clean: '#[fg=default]'
-    divergence: '#[fg=default]'
+    clear: ''
+    state: ''
+    branch: ''
+    remote: ''
+    staged: ''
+    conflict: ''
+    modified: ''
+    untracked: ''
+    stashed: ''
+    clean: ''
+    divergence: ''
   layout: [branch, divergence, flags]
   options:
     branch_max_len: 70
