--- a/tmux.conf
+++ b/tmux.conf
@@ -52,5 +52,4 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 set-hook -g client-attached 'run-shell update_display_tmux.sh'
-
-# old config
+set-option -g status-interval 5
