update branch name length

--- a/.gitmux.conf
+++ b/.gitmux.conf
@@ -24,4 +24,5 @@ tmux:
     divergence: ''
   layout: [branch, divergence, flags]
   options:
-    branch_max_len: 70
+    branch_max_len: 18
+    ellipsis: '…'
