--- a/tmux.conf
+++ b/tmux.conf
@@ -32,7 +32,8 @@ bind-key -n C-M-L swap-window -t +1
 bind -n M-H  previous-window
 bind -n M-L next-window
 
-set -g @catppuccin_flavour 'mocha'
+# set -g @catppuccin_flavour 'latte'
+set -g @catppuccin_flavour 'frappe'
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
